--- a/main.css
+++ b/main.css
@@ -7,7 +7,6 @@ body, html {
 
 body {
   font-family: Roboto;
-  font-size: 12px;
   color: #424242;
 }
 
@@ -33,9 +32,10 @@ ul {
  */
 
 .news__more {
+  color: #333;
   float: right;
   font-size: .8em;
-  color: #333;
+  min-width: 48px;
   text-decoration: none;
 }
 
@@ -49,11 +49,12 @@ ul {
 .header {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   min-height: 56px;
+  font-size: 0.9em;
   transition: min-height 0.3s;
 }
 
 .header__inner {
-  width: 800px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -81,7 +82,7 @@ ul {
  */
 
 .nav {
-  width: 800px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -121,7 +122,7 @@ ul {
 
 main {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-  width: 800px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -141,7 +142,7 @@ main {
 
 .hero {
   float: left;
-  width: 480px;
+  width: 100%;
   position: relative;
   background-image: url("./images/dog.jpg");
   background-size: cover;
@@ -158,6 +159,7 @@ main {
   width: 100%;
   color: #fff;
   padding: 1em;
+  font-size: 0.8em;
 }
 
 
@@ -169,7 +171,7 @@ main {
 
 .top-news {
   float: right;
-  width: 320px;
+  width: 100%;
   height: 300px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
@@ -214,14 +216,14 @@ main {
  */
 
 .scores {
-  width: 480px;
+  width: 100%;
   float: left;
   padding-top: 1em;
 }
 
 .scores__table {
-  width: 100%;
   border-collapse: collapse;
+  width: 100%;
 }
 
 .scores__table th,
@@ -264,7 +266,7 @@ main {
 
 .weather {
   float: right;
-  width: 320px;
+  width: 100%;
   padding: 1em;
 }
 
@@ -367,6 +369,10 @@ footer li {
 }
 
 footer a {
-  text-decoration: none;
   color: #333;
+  display: block;
+  font-size: 0.8em;
+  min-width: 48px;
+  text-align: center;
+  text-decoration: none;
 }
