--- a/main.css
+++ b/main.css
@@ -49,14 +49,11 @@ ul {
 .header {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   min-height: 56px;
-  font-size: 0.9em;
   transition: min-height 0.3s;
 }
 
 .header__inner {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  display: flex;
 }
 
 .header__logo {
@@ -68,9 +65,7 @@ ul {
 
 .header__title {
   font-weight: 300;
-  font-size: 4em;
   margin: 0.5em 0.25em;
-  display: inline-block;
   color: #212121;
 }
 
@@ -81,22 +76,36 @@ ul {
  *
  */
 
+.menu {
+  background: url('images/menu48.png') no-repeat;
+  height: 32px;
+  margin: auto 0;
+  width: 48px;
+}
+
 .nav {
-  width: 100%;
+  max-height: 5px;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
+  transition: max-height ease 0.3s;
+}
+
+.nav.open {
+  max-height: 500px;
 }
 
 .nav__list {
-  width: 100%;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
   margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 .nav__item {
   box-sizing: border-box;
   display: inline-block;
-  width: 24%;
   text-align: center;
   line-height: 24px;
   padding: 24px;
@@ -287,7 +296,7 @@ main {
 }
 
 .weather__today__image {
-  vertical-align: middle
+  vertical-align: middle;
 }
 
 .weather__today__temp {
